// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render actions.onClick 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\",\\"cursor\\":\\"pointer\\"},null]}"
  data-testid="actions.onClick"
  id="actions.onClick"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</span>
`;

exports[`Render areas.content 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="areas.content"
  id="areas.content"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</span>
`;

exports[`Render default 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="default"
  id="default"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</span>
`;

exports[`Render properties.content 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="properties.content"
  id="properties.content"
  onClick={[Function]}
>
  Foo
</span>
`;

exports[`Render properties.style 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},{\\"border\\":\\"1px solid blue\\"}]}"
  data-testid="properties.style"
  id="properties.style"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</span>
`;

exports[`Test Schema actions.onClick 1`] = `true`;

exports[`Test Schema actions.onClick 2`] = `null`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
